Added Create New Account
Added "Profile" screen after log in, which allows the user to choose to
create a new account, and then takes them to a page to fill in account
info

--- a/Android_App/Potato/AndroidManifest.xml
+++ b/Android_App/Potato/AndroidManifest.xml
@@ -34,6 +34,18 @@
             android:name="com.example.potato.RegisterActivity"
             android:label="@string/title_activity_register" >
         </activity>
+        <activity
+            android:name="com.example.potato.ProfileActivity"
+            android:label="@string/title_activity_profile" >
+        </activity>
+        <activity
+            android:name="com.example.potato.CreateActivity"
+            android:label="@string/title_activity_create" >
+        </activity>
+        <activity
+            android:name="com.example.potato.SuccessActivity2"
+            android:label="@string/title_activity_success_activity2" >
+        </activity>
     </application>
 
 </manifest>
