Changed the way we dealt with dates in several places. Still a bug in displaying year in AccountActivity

--- a/Android_App/Potato/AndroidManifest.xml
+++ b/Android_App/Potato/AndroidManifest.xml
@@ -58,6 +58,10 @@
             android:name="com.example.potato.TransactionActivity"
             android:label="@string/title_activity_transaction" >
         </activity>
+        <activity
+            android:name="com.example.potato.GenReportActivity"
+            android:label="@string/title_activity_gen_report" >
+        </activity>
     </application>
 
 </manifest>
