--- a/Android_App/Potato/AndroidManifest.xml
+++ b/Android_App/Potato/AndroidManifest.xml
@@ -62,6 +62,10 @@
             android:name="com.example.potato.GenReportActivity"
             android:label="@string/title_activity_gen_report" >
         </activity>
+        <activity
+            android:name="com.example.potato.DateRangeSelectionActivity"
+            android:label="@string/title_activity_date_range_selection" >
+        </activity>
     </application>
 
 </manifest>
