--- a/Android_App/Potato/AndroidManifest.xml
+++ b/Android_App/Potato/AndroidManifest.xml
@@ -66,6 +66,10 @@
             android:name="com.example.potato.DateRangeSelectionActivity"
             android:label="@string/title_activity_date_range_selection" >
         </activity>
+        <activity
+            android:name="com.example.potato.DateSelectionActivity"
+            android:label="@string/title_activity_date_selection" >
+        </activity>
     </application>
 
 </manifest>
